// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileDocumentTechnicalTableResults component Renders correctly when invalid asset types are used 1`] = `
<body>
  <div>
    <div>
      <div
        class="Accordion-root-242"
      >
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-243 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-246"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product1\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-248"
            >
              product name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails-235"
                  >
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-233"
                    >
                      <svg
                        class="DocumentTechnicalTableResults-formatIcon-230 format-icon"
                      />
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-233"
                    >
                      inValid
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-infoIconContainer-232"
                    >
                      <div
                        class="ToggleCard-root-267"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root-279 iconButton IconButton-42-278 IconButton-text-281"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-229"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-downloadIconContainer-234"
                    >
                      <a
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                        download="pim document title"
                        href="http://localhost:9000/document.pdf"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <svg />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileDocumentTechnicalTableResults component Renders correctly when multiple documents are present for asset types 1`] = `
<body>
  <div>
    <div>
      <div
        class="Accordion-root-113"
      >
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-114 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-117"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product1\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-119"
            >
              product name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails-106"
                  >
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-104"
                    >
                      <svg
                        class="DocumentTechnicalTableResults-formatIcon-101 format-icon"
                      />
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-104"
                    >
                      pim-code
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-infoIconContainer-103"
                    >
                      <div
                        class="ToggleCard-root-138"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root-150 iconButton IconButton-42-149 IconButton-text-152"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-100"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-downloadIconContainer-105"
                    >
                      <a
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                        download="pim document title"
                        href="http://localhost:9000/document.pdf"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <svg />
                      </a>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails-106"
                  >
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-104"
                    >
                      <svg
                        class="DocumentTechnicalTableResults-formatIcon-101 format-icon"
                      />
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-104"
                    >
                      pim-code
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-infoIconContainer-103"
                    >
                      <div
                        class="ToggleCard-root-138"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root-150 iconButton IconButton-42-149 IconButton-text-152"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-100"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-downloadIconContainer-105"
                    >
                      <a
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                        download="pim document title"
                        href="http://localhost:9000/document.pdf"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <svg />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-114 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-117"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product3\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-119"
            >
              product3
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileDocumentTechnicalTableResults component Renders correctly when not all products have all asset types 1`] = `
<body>
  <div>
    <div>
      <div
        class="Accordion-root-47"
      >
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-48 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-51"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product1\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-53"
            >
              product name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails-40"
                  >
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-38"
                    >
                      <svg
                        class="DocumentTechnicalTableResults-formatIcon-35 format-icon"
                      />
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-38"
                    >
                      asset-code
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-infoIconContainer-37"
                    >
                      <div
                        class="ToggleCard-root-72"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root-84 iconButton IconButton-42-83 IconButton-text-86"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-34"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-downloadIconContainer-39"
                    >
                      <a
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                        download="pim document title"
                        href="http://localhost:9000/document.pdf"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <svg />
                      </a>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails-40"
                  >
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-38"
                    >
                      <svg
                        class="DocumentTechnicalTableResults-formatIcon-35 format-icon"
                      />
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-38"
                    >
                      asset-code
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-infoIconContainer-37"
                    >
                      <div
                        class="ToggleCard-root-72"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root-84 iconButton IconButton-42-83 IconButton-text-86"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-34"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-downloadIconContainer-39"
                    >
                      <a
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                        download="pim document title"
                        href="http://localhost:9000/document.pdf"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <svg />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-48 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-51"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product3\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-53"
            >
              product3
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileDocumentTechnicalTableResults component Renders correctly when only single documents are present for asset types 1`] = `
<body>
  <div>
    <div>
      <div
        class="Accordion-root-18"
      >
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-19 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-22"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product1\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-24"
            >
              product name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-19 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-22"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product3\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-24"
            >
              product3
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileDocumentTechnicalTableResults component Renders correctly when valid asset types are used 1`] = `
<body>
  <div>
    <div>
      <div
        class="Accordion-root-179"
      >
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-180 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-183"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product1\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-185"
            >
              product name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails-172"
                  >
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-170"
                    >
                      <svg
                        class="DocumentTechnicalTableResults-formatIcon-167 format-icon"
                      />
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-170"
                    >
                      pim-code
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-infoIconContainer-169"
                    >
                      <div
                        class="ToggleCard-root-204"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root-216 iconButton IconButton-42-215 IconButton-text-218"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-166"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-downloadIconContainer-171"
                    >
                      <a
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                        download="pim document title"
                        href="http://localhost:9000/document.pdf"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <svg />
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
